--- a/SoaSecResourceServer/src/main/resources/application.properties
+++ b/SoaSecResourceServer/src/main/resources/application.properties
@@ -13,5 +13,5 @@ spring.security.oauth2.client.provider.spring.issuer-uri = http://localhost:9000
 
 
 spring.datasource.url=jdbc:mysql://localhost:3306/circolari
-spring.datasource.username=simone
-spring.datasource.password=simone
+spring.datasource.username=
+spring.datasource.password=
