--- a/SoaSecAuthorizationServer/src/main/resources/application.properties
+++ b/SoaSecAuthorizationServer/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=9000
 
 spring.datasource.url=jdbc:mysql://localhost:3306/circolari
-spring.datasource.username=simone
-spring.datasource.password=simone
+spring.datasource.username=
+spring.datasource.password=
 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
